[GREEN] Implement Payment model