@@ -3,10 +3,10 @@ package id.ac.ui.cs.advprog.eshop.model;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Map;
-import java.util.ArrayList;
-import java.util.List;
 import java.util.HashMap;
+import java.util.List;
+import java.util.ArrayList;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -31,16 +31,18 @@ public class PaymentTest {
 
         this.products.add(product1);
         this.products.add(product2);
+
+        this.orders = new ArrayList<>();
+        this.orders.add(this.order);
     }
 
-    // Main Payment
     @Test
     void testDuplicatePayment() {
-        Map<String, String> paymentData = new HashMap<String, String>();
+        Map<String, String> paymentData = new HashMap<>();
         paymentData.put("voucherCode", "ESHOP1234ABC5678");
-        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", PaymentMethod.VOUCHER_CODE.getValue(), this.orders.getFirst(), paymentData);
+        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", "VOUCHER_CODE", this.orders.get(0), paymentData);
 
-        assertSame(this.orders.getFirst(), payment.getOrder());
+        assertSame(this.orders.get(0), payment.getOrder());
     }
 
     @Test
@@ -49,7 +51,7 @@ public class PaymentTest {
         paymentData.put("voucherCode", "ESHOP1234ABC5678");
 
         assertThrows(IllegalArgumentException.class, () -> {
-            Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", "QRIS", this.orders.getFirst(), paymentData);
+            Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", "QRIS", this.orders.get(0), paymentData);
         });
     }
 
@@ -57,12 +59,13 @@ public class PaymentTest {
     void testRejectedPaymentEmptyData() {
         Map<String, String> paymentData = new HashMap<>();
 
-        Payment voucherPayment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", PaymentMethod.VOUCHER_CODE.getValue(), null, paymentData);
+        Payment voucherPayment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", "VOUCHER_CODE", order, paymentData);
         assertEquals("REJECTED", voucherPayment.getStatus());
 
-        Payment banktransferPayment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", PaymentMethod.PAYMENT_BY_BANK_TRANSFER.getValue(), null, paymentData);
+        Payment banktransferPayment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", "PAYMENT_BY_BANK_TRANSFER", order, paymentData);
         assertEquals("REJECTED", banktransferPayment.getStatus());
     }
+
 
     // Voucher Code
     @Test
@@ -70,16 +73,18 @@ public class PaymentTest {
         Map<String, String> paymentData = new HashMap<>();
         paymentData.put("voucherCode", "ESHOP1234ABC5678");
 
-        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", PaymentMethod.VOUCHER_CODE.getValue(), this.orders.getFirst(), paymentData);
+        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", "VOUCHER_CODE", this.orders.get(0), paymentData);
+
         assertEquals("SUCCESS", payment.getStatus());
     }
+
 
     @Test
     void testRejectedVoucherCodeNot16Chars() {
         Map<String, String> paymentData = new HashMap<>();
         paymentData.put("voucherCode", "ESHOP");
 
-        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", PaymentMethod.VOUCHER_CODE.getValue(), this.orders.getFirst(), paymentData);
+        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", "VOUCHER_CODE", this.orders.get(0), paymentData);
         assertEquals("REJECTED", payment.getStatus());
     }
 
@@ -88,7 +93,7 @@ public class PaymentTest {
         Map<String, String> paymentData = new HashMap<>();
         paymentData.put("voucherCode", "SSOOP1234ABC5678");
 
-        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", PaymentMethod.VOUCHER_CODE.getValue(), this.orders.getFirst(), paymentData);
+        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", "VOUCHER_CODE", this.orders.get(0), paymentData);
         assertEquals("REJECTED", payment.getStatus());
     }
 
@@ -97,7 +102,7 @@ public class PaymentTest {
         Map<String, String> paymentData = new HashMap<>();
         paymentData.put("voucherCode", "ESHOP1234ABC567A");
 
-        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", PaymentMethod.VOUCHER_CODE.getValue(), this.orders.getFirst(), paymentData);
+        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", "VOUCHER_CODE", this.orders.get(0), paymentData);
         assertEquals("REJECTED", payment.getStatus());
     }
 
@@ -107,7 +112,7 @@ public class PaymentTest {
         paymentData.put("bankName", "BCA");
         paymentData.put("referenceCode", "001");
 
-        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", PaymentMethod.PAYMENT_BY_BANK_TRANSFER.getValue(), this.orders.getFirst(), paymentData);
+        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", "PAYMENT_BY_BANK_TRANSFER", this.orders.get(0), paymentData);
 
         assertEquals("SUCCESS", payment.getStatus());
     }
@@ -116,7 +121,7 @@ public class PaymentTest {
     void testRejectedPaymentByBankTransferEmptyBankName() {
         Map<String, String> paymentData = new HashMap<String, String>();
         paymentData.put("referenceCode", "001");
-        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", PaymentMethod.PAYMENT_BY_BANK_TRANSFER.getValue(), this.orders.getFirst(), paymentData);
+        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", "PAYMENT_BY_BANK_TRANSFER", this.orders.get(0), paymentData);
 
         assertEquals("REJECTED", payment.getStatus());
     }
@@ -125,9 +130,10 @@ public class PaymentTest {
     void testRejectedPaymentByBankTransferEmptyReferenceCode() {
         Map<String, String> paymentData = new HashMap<String, String>();
         paymentData.put("bankName", "BCA");
-        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", PaymentMethod.PAYMENT_BY_BANK_TRANSFER.getValue(), this.orders.getFirst(), paymentData);
+        Payment payment = new Payment("13652556-012a-4c07-b546-54eb1396d79b", "PAYMENT_BY_BANK_TRANSFER", this.orders.get(0), paymentData);
 
         assertEquals("REJECTED", payment.getStatus());
     }
 }
-}
+
+
